--- a/bnb-cocos/Resources/Property List.plist
+++ b/bnb-cocos/Resources/Property List.plist
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   Property List.plist
-   MyCppGame
-
-   Created by 付旭炜 on 2017/5/11.
-   Copyright (c) 2017年 __MyCompanyName__. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<dict>
+	<key>BackGround</key>
+	<array/>
+	<key>Sounds</key>
+	<array/>
+	<key>Musics</key>
+	<array>
+		<string></string>
+		<string></string>
+		<string></string>
+	</array>
+	<key>SpriteSheets</key>
+	<array/>
+</dict>
 </plist>
